parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ABSTRACT
    ARRAY
    ARROW
    AS
    BACKSLASH
    BREAK
    CASE
    CATCH
    CLASS
    COLON
    COMMA
    CONCAT_ASSIGN
    CONST
    CONTINUE
    DECREMENT
    DEFAULT
    DEFINE
    DIVIDE
    DIVIDE_ASSIGN
    DOT
    ECHO
    ELSE
    ELSEIF
    EXTENDS
    FALSE
    FINAL
    FINALLY
    FOR
    FOREACH
    FUNCTION
    ID
    IDENTICAL
    IF
    IMPLEMENTS
    INCLUDE
    INCLUDE_ONCE
    INCREMENT
    INSTANCEOF
    INTERFACE
    LBRACE
    LBRACKET
    MINUS
    MINUS_ASSIGN
    MOD
    NAMESPACE
    NEW
    NULL
    OBJECT_OP
    PHP_CLOSE
    PHP_OPEN
    PLUS
    PLUS_ASSIGN
    POW
    PRIVATE
    PROTECTED
    PUBLIC
    RBRACE
    RBRACKET
    REQUIRE
    REQUIRE_ONCE
    RETURN
    STATIC
    STRING
    SUPERGLOBALS
    SWITCH
    THIS_VAR
    THROW
    TIMES
    TIMES_ASSIGN
    TRAIT
    TRUE
    TRY
    USE
    WHILE

Grammar

Rule 0     S' -> programa
Rule 1     programa -> asigReferencia
Rule 2     programa -> expressBol
Rule 3     asigReferencia -> VARIABLE ASSIGN AMPERSAND VARIABLE SEMICOLON
Rule 4     expressBol -> operacionComparacion
Rule 5     expressBol -> operacionLogico
Rule 6     operacionComparacion -> valor operadorCom valor
Rule 7     operacionLogico -> termLogico operadorLogico termLogico
Rule 8     termLogico -> LPAREN operacionComparacion RPAREN
Rule 9     termLogico -> BOOL
Rule 10    valor -> INTEGER
Rule 11    valor -> FLOAT
Rule 12    valor -> VARIABLE
Rule 13    operadorCom -> EQ
Rule 14    operadorCom -> NE
Rule 15    operadorCom -> LT
Rule 16    operadorCom -> GE
Rule 17    operadorCom -> LE
Rule 18    operadorCom -> GT
Rule 19    operadorLogico -> AND_OP
Rule 20    operadorLogico -> OR_OP
Rule 21    operadorLogico -> NOT_OP
Rule 22    operadorLogico -> XOR_OP

Terminals, with rules where they appear

ABSTRACT             : 
AMPERSAND            : 3
AND_OP               : 19
ARRAY                : 
ARROW                : 
AS                   : 
ASSIGN               : 3
BACKSLASH            : 
BOOL                 : 9
BREAK                : 
CASE                 : 
CATCH                : 
CLASS                : 
COLON                : 
COMMA                : 
CONCAT_ASSIGN        : 
CONST                : 
CONTINUE             : 
DECREMENT            : 
DEFAULT              : 
DEFINE               : 
DIVIDE               : 
DIVIDE_ASSIGN        : 
DOT                  : 
ECHO                 : 
ELSE                 : 
ELSEIF               : 
EQ                   : 13
EXTENDS              : 
FALSE                : 
FINAL                : 
FINALLY              : 
FLOAT                : 11
FOR                  : 
FOREACH              : 
FUNCTION             : 
GE                   : 16
GT                   : 18
ID                   : 
IDENTICAL            : 
IF                   : 
IMPLEMENTS           : 
INCLUDE              : 
INCLUDE_ONCE         : 
INCREMENT            : 
INSTANCEOF           : 
INTEGER              : 10
INTERFACE            : 
LBRACE               : 
LBRACKET             : 
LE                   : 17
LPAREN               : 8
LT                   : 15
MINUS                : 
MINUS_ASSIGN         : 
MOD                  : 
NAMESPACE            : 
NE                   : 14
NEW                  : 
NOT_OP               : 21
NULL                 : 
OBJECT_OP            : 
OR_OP                : 20
PHP_CLOSE            : 
PHP_OPEN             : 
PLUS                 : 
PLUS_ASSIGN          : 
POW                  : 
PRIVATE              : 
PROTECTED            : 
PUBLIC               : 
RBRACE               : 
RBRACKET             : 
REQUIRE              : 
REQUIRE_ONCE         : 
RETURN               : 
RPAREN               : 8
SEMICOLON            : 3
STATIC               : 
STRING               : 
SUPERGLOBALS         : 
SWITCH               : 
THIS_VAR             : 
THROW                : 
TIMES                : 
TIMES_ASSIGN         : 
TRAIT                : 
TRUE                 : 
TRY                  : 
USE                  : 
VARIABLE             : 3 3 12
WHILE                : 
XOR_OP               : 22
error                : 

Nonterminals, with rules where they appear

asigReferencia       : 1
expressBol           : 2
operacionComparacion : 4 8
operacionLogico      : 5
operadorCom          : 6
operadorLogico       : 7
programa             : 0
termLogico           : 7 7
valor                : 6 6

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . asigReferencia
    (2) programa -> . expressBol
    (3) asigReferencia -> . VARIABLE ASSIGN AMPERSAND VARIABLE SEMICOLON
    (4) expressBol -> . operacionComparacion
    (5) expressBol -> . operacionLogico
    (6) operacionComparacion -> . valor operadorCom valor
    (7) operacionLogico -> . termLogico operadorLogico termLogico
    (10) valor -> . INTEGER
    (11) valor -> . FLOAT
    (12) valor -> . VARIABLE
    (8) termLogico -> . LPAREN operacionComparacion RPAREN
    (9) termLogico -> . BOOL

    VARIABLE        shift and go to state 4
    INTEGER         shift and go to state 9
    FLOAT           shift and go to state 10
    LPAREN          shift and go to state 11
    BOOL            shift and go to state 12

    programa                       shift and go to state 1
    asigReferencia                 shift and go to state 2
    expressBol                     shift and go to state 3
    operacionComparacion           shift and go to state 5
    operacionLogico                shift and go to state 6
    valor                          shift and go to state 7
    termLogico                     shift and go to state 8

state 1

    (0) S' -> programa .



state 2

    (1) programa -> asigReferencia .

    $end            reduce using rule 1 (programa -> asigReferencia .)


state 3

    (2) programa -> expressBol .

    $end            reduce using rule 2 (programa -> expressBol .)


state 4

    (3) asigReferencia -> VARIABLE . ASSIGN AMPERSAND VARIABLE SEMICOLON
    (12) valor -> VARIABLE .

    ASSIGN          shift and go to state 13
    EQ              reduce using rule 12 (valor -> VARIABLE .)
    NE              reduce using rule 12 (valor -> VARIABLE .)
    LT              reduce using rule 12 (valor -> VARIABLE .)
    GE              reduce using rule 12 (valor -> VARIABLE .)
    LE              reduce using rule 12 (valor -> VARIABLE .)
    GT              reduce using rule 12 (valor -> VARIABLE .)


state 5

    (4) expressBol -> operacionComparacion .

    $end            reduce using rule 4 (expressBol -> operacionComparacion .)


state 6

    (5) expressBol -> operacionLogico .

    $end            reduce using rule 5 (expressBol -> operacionLogico .)


state 7

    (6) operacionComparacion -> valor . operadorCom valor
    (13) operadorCom -> . EQ
    (14) operadorCom -> . NE
    (15) operadorCom -> . LT
    (16) operadorCom -> . GE
    (17) operadorCom -> . LE
    (18) operadorCom -> . GT

    EQ              shift and go to state 15
    NE              shift and go to state 16
    LT              shift and go to state 17
    GE              shift and go to state 18
    LE              shift and go to state 19
    GT              shift and go to state 20

    operadorCom                    shift and go to state 14

state 8

    (7) operacionLogico -> termLogico . operadorLogico termLogico
    (19) operadorLogico -> . AND_OP
    (20) operadorLogico -> . OR_OP
    (21) operadorLogico -> . NOT_OP
    (22) operadorLogico -> . XOR_OP

    AND_OP          shift and go to state 22
    OR_OP           shift and go to state 23
    NOT_OP          shift and go to state 24
    XOR_OP          shift and go to state 25

    operadorLogico                 shift and go to state 21

state 9

    (10) valor -> INTEGER .

    EQ              reduce using rule 10 (valor -> INTEGER .)
    NE              reduce using rule 10 (valor -> INTEGER .)
    LT              reduce using rule 10 (valor -> INTEGER .)
    GE              reduce using rule 10 (valor -> INTEGER .)
    LE              reduce using rule 10 (valor -> INTEGER .)
    GT              reduce using rule 10 (valor -> INTEGER .)
    $end            reduce using rule 10 (valor -> INTEGER .)
    RPAREN          reduce using rule 10 (valor -> INTEGER .)


state 10

    (11) valor -> FLOAT .

    EQ              reduce using rule 11 (valor -> FLOAT .)
    NE              reduce using rule 11 (valor -> FLOAT .)
    LT              reduce using rule 11 (valor -> FLOAT .)
    GE              reduce using rule 11 (valor -> FLOAT .)
    LE              reduce using rule 11 (valor -> FLOAT .)
    GT              reduce using rule 11 (valor -> FLOAT .)
    $end            reduce using rule 11 (valor -> FLOAT .)
    RPAREN          reduce using rule 11 (valor -> FLOAT .)


state 11

    (8) termLogico -> LPAREN . operacionComparacion RPAREN
    (6) operacionComparacion -> . valor operadorCom valor
    (10) valor -> . INTEGER
    (11) valor -> . FLOAT
    (12) valor -> . VARIABLE

    INTEGER         shift and go to state 9
    FLOAT           shift and go to state 10
    VARIABLE        shift and go to state 27

    operacionComparacion           shift and go to state 26
    valor                          shift and go to state 7

state 12

    (9) termLogico -> BOOL .

    AND_OP          reduce using rule 9 (termLogico -> BOOL .)
    OR_OP           reduce using rule 9 (termLogico -> BOOL .)
    NOT_OP          reduce using rule 9 (termLogico -> BOOL .)
    XOR_OP          reduce using rule 9 (termLogico -> BOOL .)
    $end            reduce using rule 9 (termLogico -> BOOL .)


state 13

    (3) asigReferencia -> VARIABLE ASSIGN . AMPERSAND VARIABLE SEMICOLON

    AMPERSAND       shift and go to state 28


state 14

    (6) operacionComparacion -> valor operadorCom . valor
    (10) valor -> . INTEGER
    (11) valor -> . FLOAT
    (12) valor -> . VARIABLE

    INTEGER         shift and go to state 9
    FLOAT           shift and go to state 10
    VARIABLE        shift and go to state 27

    valor                          shift and go to state 29

state 15

    (13) operadorCom -> EQ .

    INTEGER         reduce using rule 13 (operadorCom -> EQ .)
    FLOAT           reduce using rule 13 (operadorCom -> EQ .)
    VARIABLE        reduce using rule 13 (operadorCom -> EQ .)


state 16

    (14) operadorCom -> NE .

    INTEGER         reduce using rule 14 (operadorCom -> NE .)
    FLOAT           reduce using rule 14 (operadorCom -> NE .)
    VARIABLE        reduce using rule 14 (operadorCom -> NE .)


state 17

    (15) operadorCom -> LT .

    INTEGER         reduce using rule 15 (operadorCom -> LT .)
    FLOAT           reduce using rule 15 (operadorCom -> LT .)
    VARIABLE        reduce using rule 15 (operadorCom -> LT .)


state 18

    (16) operadorCom -> GE .

    INTEGER         reduce using rule 16 (operadorCom -> GE .)
    FLOAT           reduce using rule 16 (operadorCom -> GE .)
    VARIABLE        reduce using rule 16 (operadorCom -> GE .)


state 19

    (17) operadorCom -> LE .

    INTEGER         reduce using rule 17 (operadorCom -> LE .)
    FLOAT           reduce using rule 17 (operadorCom -> LE .)
    VARIABLE        reduce using rule 17 (operadorCom -> LE .)


state 20

    (18) operadorCom -> GT .

    INTEGER         reduce using rule 18 (operadorCom -> GT .)
    FLOAT           reduce using rule 18 (operadorCom -> GT .)
    VARIABLE        reduce using rule 18 (operadorCom -> GT .)


state 21

    (7) operacionLogico -> termLogico operadorLogico . termLogico
    (8) termLogico -> . LPAREN operacionComparacion RPAREN
    (9) termLogico -> . BOOL

    LPAREN          shift and go to state 11
    BOOL            shift and go to state 12

    termLogico                     shift and go to state 30

state 22

    (19) operadorLogico -> AND_OP .

    LPAREN          reduce using rule 19 (operadorLogico -> AND_OP .)
    BOOL            reduce using rule 19 (operadorLogico -> AND_OP .)


state 23

    (20) operadorLogico -> OR_OP .

    LPAREN          reduce using rule 20 (operadorLogico -> OR_OP .)
    BOOL            reduce using rule 20 (operadorLogico -> OR_OP .)


state 24

    (21) operadorLogico -> NOT_OP .

    LPAREN          reduce using rule 21 (operadorLogico -> NOT_OP .)
    BOOL            reduce using rule 21 (operadorLogico -> NOT_OP .)


state 25

    (22) operadorLogico -> XOR_OP .

    LPAREN          reduce using rule 22 (operadorLogico -> XOR_OP .)
    BOOL            reduce using rule 22 (operadorLogico -> XOR_OP .)


state 26

    (8) termLogico -> LPAREN operacionComparacion . RPAREN

    RPAREN          shift and go to state 31


state 27

    (12) valor -> VARIABLE .

    EQ              reduce using rule 12 (valor -> VARIABLE .)
    NE              reduce using rule 12 (valor -> VARIABLE .)
    LT              reduce using rule 12 (valor -> VARIABLE .)
    GE              reduce using rule 12 (valor -> VARIABLE .)
    LE              reduce using rule 12 (valor -> VARIABLE .)
    GT              reduce using rule 12 (valor -> VARIABLE .)
    $end            reduce using rule 12 (valor -> VARIABLE .)
    RPAREN          reduce using rule 12 (valor -> VARIABLE .)


state 28

    (3) asigReferencia -> VARIABLE ASSIGN AMPERSAND . VARIABLE SEMICOLON

    VARIABLE        shift and go to state 32


state 29

    (6) operacionComparacion -> valor operadorCom valor .

    $end            reduce using rule 6 (operacionComparacion -> valor operadorCom valor .)
    RPAREN          reduce using rule 6 (operacionComparacion -> valor operadorCom valor .)


state 30

    (7) operacionLogico -> termLogico operadorLogico termLogico .

    $end            reduce using rule 7 (operacionLogico -> termLogico operadorLogico termLogico .)


state 31

    (8) termLogico -> LPAREN operacionComparacion RPAREN .

    AND_OP          reduce using rule 8 (termLogico -> LPAREN operacionComparacion RPAREN .)
    OR_OP           reduce using rule 8 (termLogico -> LPAREN operacionComparacion RPAREN .)
    NOT_OP          reduce using rule 8 (termLogico -> LPAREN operacionComparacion RPAREN .)
    XOR_OP          reduce using rule 8 (termLogico -> LPAREN operacionComparacion RPAREN .)
    $end            reduce using rule 8 (termLogico -> LPAREN operacionComparacion RPAREN .)


state 32

    (3) asigReferencia -> VARIABLE ASSIGN AMPERSAND VARIABLE . SEMICOLON

    SEMICOLON       shift and go to state 33


state 33

    (3) asigReferencia -> VARIABLE ASSIGN AMPERSAND VARIABLE SEMICOLON .

    $end            reduce using rule 3 (asigReferencia -> VARIABLE ASSIGN AMPERSAND VARIABLE SEMICOLON .)

